<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/gap_external"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/gap_internal"
            android:text="@string/set_date" />

        <android.helper.DateTimePickerEditText
            android:id="@+id/edt_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/gap_internal"
            android:layout_weight="1"
            android:hint="@string/date" />

        <Button
            android:id="@+id/btn_today"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/gap_internal"
            android:onClick="setDateToday"
            android:text="@string/today" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/gap_internal"
            android:text="@string/set_time" />

        <android.helper.DateTimePickerEditText
            android:id="@+id/edt_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/gap_internal"
            android:layout_weight="1"
            android:hint="@string/time"
            android:inputType="time" />

        <Button
            android:id="@+id/btn_now"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/gap_internal"
            android:onClick="setTimeNow"
            android:text="@string/now" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/gap_internal"
            android:text="@string/set_time" />

        <android.helper.DateTimePickerEditText
            android:id="@+id/edt_time2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/gap_internal"
            android:layout_weight="1"
            android:format="yyyy MMM dd"
            android:hint="@string/time"
            android:inputType="date" />

        <Button
            android:id="@+id/btn_now2"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/gap_internal"
            android:onClick="setTimeNow"
            android:text="@string/now" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="submitDateAndTime"
        android:text="@string/submit" />

</LinearLayout>